# openldap-config-parser

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.md  README.rst  pyproject.toml
.github/workflows/: main.yml
docs/: .buildinfo  changelog.html  conf.py  genindex.html  index.html  modules.html  modules.rst  objects.inv  openldap_config_parser.command.html  openldap_config_parser.config.html  openldap_config_parser.config.rst  openldap_config_parser.database.html  openldap_config_parser.database.rst  openldap_config_parser.exceptions.html  openldap_config_parser.exceptions.rst  openldap_config_parser.html  openldap_config_parser.parser.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: changelog.doctree  environment.pickle  index.doctree  modules.doctree  openldap_config_parser.command.doctree  openldap_config_parser.config.doctree  openldap_config_parser.database.doctree  openldap_config_parser.doctree  openldap_config_parser.exceptions.doctree  openldap_config_parser.parser.doctree
docs/_sources/: openldap_config_parser.rst.txt
docs/_static/: documentation_options.js
pre-docs/: conf.py  index.rst  openldap_config_parser.command.rst  openldap_config_parser.parser.rst
pre-docs/source/: conf.py  index.rst
src/openldap_config_parser/: __init__.py  command.py  config.py  database.py  exceptions.py  parser.py
tests/: test_cli.py  test_schema.py
tests/config/: simple_slapd.conf
